# Q

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md~  Test file.txt  clear.bat  cmake_install.cmake  game  main  make.bat  make.sh  xD.txt
data/maps/: first.m
include/lin_x64/: SDL_config.h
src/engine/client/: audio.cpp  audio.h  coords.cpp  coords.h  graphics.cpp  graphics.h  main.cpp  main.h  map.cpp  map.h  music.cpp  music.h  player.cpp  player.h  sound.cpp  sound.h  textrender.cpp  textrender.h
