cmake_minimum_required ( VERSION 2.6 )
# Укажите здесь имя вашего проекта.
# Учитываете установку переменных 
# <project_name>_BINARY_DIR и  <project_name>_SOURCE_DIR
# в значение имени каталога с проектом.
project ( game )
set ( SRC_DIR ${PROJECT_SOURCE_DIR}/src/engine/client )

# Укажите вместо my-project имя своего приложения
# - имя исполняемого файла
set ( APP_NAME game )

set( CMAKE_BUILD_TYPE RELEASE )
FILE(GLOB SOURCES "${SRC_DIR}/*.cpp")
FILE(GLOB HEADERS "${SRC_DIR}/*.h")
#FILE(GLOB TEXTURE_FILES
#	"${TEXTURE_DIR}/*.jpg"
#	"${TEXTURE_DIR}/*.png"
#)

#CONFIGURE_FILE(config.h.in "${PROJECT_BINARY_DIR}/config.h")
if ( CMAKE_COMPILER_IS_GNUCXX )
 IF(WIN32)
link_directories( "${PROJECT_SOURCE_DIR}/winlib" )
set( REQUIRED_LIBRARIES
		SDL
		SDL_image 
		SDL_ttf
		SDL_mixer)
 
FIND_PACKAGE(OpenGL REQUIRED)

#FILE(COPY ${TEXTURE_FILES} DESTINATION "${TEXTURE_DIR}")

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}
	${OPENGL_INCLUDE_DIR}
)
ADD_EXECUTABLE(${APP_NAME} ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(${APP_NAME}
	${REQUIRED_LIBRARIES}
	${OPENGL_LIBRARY}
)
 ELSE(WIN32)
FIND_PACKAGE(SDL REQUIRED)
 IF(NOT SDL_FOUND)
 MESSAGE(SEND_ERROR "SDL not found")
 return()
 ENDIF(NOT SDL_FOUND)
FIND_PACKAGE(SDL_image REQUIRED)
 IF(NOT SDLIMAGE_FOUND)
 MESSAGE(SEND_ERROR "SDL_image not found")
 return()
 ENDIF(NOT SDLIMAGE_FOUND)
FIND_PACKAGE(SDL_ttf REQUIRED)
IF(NOT SDLTTF_FOUND)
 MESSAGE(SEND_ERROR "SDL_ttf not found")
 return()
 ENDIF(NOT SDLTTF_FOUND)
FIND_PACKAGE(SDL_sound REQUIRED)
IF(NOT SDLSOUND_FOUND)
 MESSAGE(SEND_ERROR "SDL_sound not found")
 return()
 ENDIF(NOT SDLSOUND_FOUND)
FIND_PACKAGE(SDL_mixer REQUIRED)
IF(NOT SDLMIXER_FOUND)
 MESSAGE(SEND_ERROR "SDL_mixer not found")
 return()
 ENDIF(NOT SDLMIXER_FOUND)
FIND_PACKAGE(OpenGL REQUIRED)
IF(NOT OPENGL_FOUND)
 MESSAGE(SEND_ERROR "OpenGL not found")
 return()
 ENDIF(NOT OPENGL_FOUND)

#FILE(COPY ${TEXTURE_FILES} DESTINATION "${TEXTURE_DIR}")

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}
	${SDL_INCLUDE_DIR}
	${SDLIMAGE_INCLUDE_DIR}
	${SDLTTF_INCLUDE_DIR}
	${SDLSOUND_INCLUDE_DIR}
	${SDLMIXER_INCLUDE_DIR}
	${OPENGL_INCLUDE_DIR}
)
ADD_EXECUTABLE(${APP_NAME} ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(${APP_NAME}
	${SDL_LIBRARY}
	${SDLIMAGE_LIBRARY}
	${SDLTTF_LIBRARY}
	${SDLSOUND_LIBRARY}
	${SDLMIXER_LIBRARY}
	${OPENGL_LIBRARY}
)
 ENDIF(WIN32)
ELSE(CMAKE_COMPILER_IS_GNUCXX)
MESSAGE(SEND_ERROR "You need to have g++ or MinGW installed or just change make.bat")
ENDIF (CMAKE_COMPILER_IS_GNUCXX)
